# certspotter-processing

./: COPYING  README.md  config.py  results.py  sending.py  setup.cfg  test.py
tests/: config-with-recipients.txt  results.txt
