[pep8]
ignore = E221, E722
max-line-length = 132

[pycodestyle]
ignore = E221, E722, W504
max-line-length = 132

[metadata]
name = certspotter-processing
description = A bunch of short scripts used for handing the results of the program certspotter. 
author = Wagner Sebastian
maintainer = Wagner Sebastian
maintainer_email = wagner@cert.at
url = https://github.com/certat/certspotter-processing
license =  GPL-3.0-or-laster
license_file = COPYING
